# finance-research-data

./: .gitignore  README.md  pyproject.toml
src/finance_research_data/: __init__.py
src/finance_research_data/_config/: settings.py
src/finance_research_data/_infrastructure/: auth.py  download_tools.py  http_tools.py
